# Tafawaq

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  DECISIONS.md  DESIGN_PROMPT.md  Dockerfile  PROJECT_CONTEXT.md  README.md  SESSION_LOG.md  alembic.ini  docker-compose.yml  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
admin/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
admin/src/: App.tsx  index.css
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_textbook.py  0003_official_exams.py  0004_conversations_subject.py  0005_user_details.py  0006_users_name.py  0007_chat_sessions.py  0008_fk_indexes.py  0009_drop_topic_stats_subtopic.py  0010_drop_chunks_dead_columns.py  0011_drop_exam_sessions_expires_at.py  0012_guardrail_events.py
app/: main.py  utils.py
app/api/: dependencies.py  exceptions.py
app/data/: 2021_regular_answer_key.md  2021_regular_exam.md  curriculum.json  exam_analysis.json  math_analysis.json  question_tags.json  units.json
app/domain/: enums.py  exceptions.py  grading.py  models.py
app/infra/: auth.py  email.py  evaluator.py  langfuse_client.py  minio_client.py  pii_redaction.py  redis_client.py  tts.py  vault.py
app/repositories/: admin_repo.py  chunk_repo.py  exam_repo.py  guardrail_repo.py  message_repo.py  official_exam_repo.py  orm.py  textbook_repo.py  topic_stats_repo.py  user_details_repo.py
app/services/: admin_service.py  chat_service.py  exam_service.py  grading_service.py  guardrails_service.py  official_exam_service.py  retrieval_service.py  topic_service.py  tts_service.py
frontend/: TafawwaqMascot.jsx  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
guardrails-service/: Dockerfile  main.py  requirements.txt  verdict.py
ingestion/: book_ingest.py  chunker.py  embedder.py  official_exam_pipeline.py  pdf_extractor.py  pipeline.py  tagger.py  textbook_pipeline.py  topic_tagging.py
prompts/: chat.py  exam_generation.py  extraction.py  grading.py  official_exam_parsing.py  tagging_past_exams.py  tagging_textbook.py
scripts/: download_math_gs_exams.py  seed_langfuse_prompts.py  seed_vault.sh
tests/: conftest.py
textbook/: README.md  building_up_mathematics_1.md  chapter1_logic.md
(+102 files in other folders)
